traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:10: error: value setPos is not a member of Unit
possible cause: maybe a semicolon is missing before `value setPos'?
    } setPos(i,j);
      ^TraversalZigZag:10: error: not found: value j
    } setPos(i,j);
               ^